src/main/java/com/example/medical/error/InvalidDataException.java

package com.example.medical.error;

public class InvalidDataException extends RuntimeException {
  public InvalidDataException(String message) {
    super(message);
  }
}
